...
                            <constraint firstItem="9Bc-mH-7f2" firstAttribute="trailing" secondItem="DlF-IH-CAp" secondAttribute="trailing" id="c1s-6n-gy2"/>
                            <constraint firstItem="9Bc-mH-7f2" firstAttribute="top" secondItem="djS-nD-rN3" secondAttribute="top" id="nK1-x3-OZS"/>
                            <constraint firstItem="9Bc-mH-7f2" firstAttribute="leading" secondItem="DlF-IH-CAp" secondAttribute="leading" id="oRq-cA-5VF"/>
                            <constraint firstAttribute="bottom" secondItem="9Bc-mH-7f2" secondAttribute="bottom" id="yK2-ng-CxC"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Camera" id="4kf-om-lTy"/>
                    <connections>
                        <outlet property="previewView" destination="9Bc-mH-7f2" id="gMN-dp-cyo"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zTp-yX-rSw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
